services/fd-tagging-tool/src/test/resources/invalid/NoComponentPresent/NoComponentPresent.mt
package invalid.NoComponentPresent;

component NoComponentPresent {
  Source source;
  Sink sink;

  source.value -> sink.value;
}